--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-svelte3": "^2.7.3",
+    "js-sha1": "^0.6.0",
     "rollup": "^1.20.0",
     "rollup-plugin-css-only": "^2.0.0",
     "rollup-plugin-livereload": "^1.0.0",
