--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,21 @@
 {
+  "printWidth": 150,
   "tabWidth": 2,
+  "useTabs": false,
   "semi": false,
   "singleQuote": true,
+  "quoteProps": "as-needed",
+  "jsxSingleQuote": false,
   "trailingComma": "es5",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "avoid",
+  "rangeStart": 0,
+  "rangeEnd": 10000,
+  "requirePragma": false,
+  "insertPragma": false,
+  "proseWrap": "preserve",
+  "htmlWhitespaceSensitivity": "css",
+  "vueIndentScriptAndStyle": false,
   "plugins": ["prettier-plugin-svelte"]
 }
