--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@sveltech/routify": "^1.5.8",
     "localforage": "^1.7.3",
     "materialize-css": "^1.0.0-rc.2",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "svelte-infinite-scroll": "^1.4.0"
   }
 }
