--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "localforage": "^1.7.3",
     "materialize-css": "^1.0.0-rc.2",
     "npm-run-all": "^4.1.5",
-    "svelte-infinite-scroll": "^1.4.0"
+    "svelte-infinite-scroll": "^1.4.0",
+    "svelte-select": "^3.8.1"
   }
 }
