--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@rollup/plugin-replace": "^2.3.3",
+    "autoprefixer": "^9.8.4",
     "eslint": "^7.3.1",
     "eslint-config-google": "^0.14.0",
     "eslint-config-standard": "^14.1.1",
@@ -23,6 +24,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-svelte3": "^2.7.3",
     "js-sha1": "^0.6.0",
+    "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^1.1.0",
     "rollup": "^1.20.0",
@@ -31,7 +33,8 @@
     "rollup-plugin-svelte": "^5.2.3",
     "rollup-plugin-terser": "^5.1.2",
     "sirv-cli": "^0.4.6",
-    "svelte": "^3.23.2"
+    "svelte": "^3.23.2",
+    "svelte-preprocess": "^3.9.11"
   },
   "dependencies": {
     "@sveltech/routify": "^1.7.13",
