--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-svelte3": "^2.7.3",
     "js-sha1": "^0.6.0",
+    "json-server": "^0.16.1",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^1.1.0",
